Opened 13 years ago

Closed 13 years ago

#3214 closed defect (fixed)

ffmpeg can no longer open mega weird audio test mkv

Reported by: Marton Balint Owned by:
Priority: important Component: avformat
Version: git-master Keywords: mkv regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:
avformat_open_input fails with ERROR_INVALID_DATA in the mega weird audio test file:
http://www.cccp-project.net/beta/test_files/%5bCCCP%5d_Mega_Weird_Audio_Test.mkv

How to reproduce:

% ffmpeg -i \[CCCP\]_Mega_Weird_Audio_Test.mkv dummy.wav
ffmpeg version N-58939-gaae5c4d Copyright (c) 2000-2013 the FFmpeg developers
  built on Dec 10 2013 00:41:34 with gcc 4.8 (SUSE Linux)
  configuration: --disable-vaapi --enable-vdpau --enable-gpl --enable-libfreetype --enable-libzvbi --enable-libass --enable-frei0r
  libavutil      52. 58.100 / 52. 58.100
  libavcodec     55. 45.100 / 55. 45.100
  libavformat    55. 22.100 / 55. 22.100
  libavdevice    55.  5.102 / 55.  5.102
  libavfilter     3. 92.100 /  3. 92.100
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 17.104 /  0. 17.104
  libpostproc    52.  3.100 / 52.  3.100
[CCCP]_Mega_Weird_Audio_Test.mkv: Invalid data found when processing input

Change History (3)

comment:1 by Carl Eugen Hoyos, 13 years ago

Reproduced by developer: set
Status: newopen

comment:2 by Carl Eugen Hoyos, 13 years ago

Regression since 2c8d876d / 569d18aa

comment:3 by Stefano Sabatini, 13 years ago

Resolution: fixed
Status: openclosed

Should be fixed in:

commit 0d944ee34349805b29f9c91b15c8009d16df01ab
Author: James Almer <jamrial@gmail.com>
Date:   Tue Dec 24 20:26:32 2013 -0300

    matroskadec: Fix bug when parsing realaudio codec parameters
    
    flavor can be 0.
    
    This fixes tract ticket #3214
    
    Signed-off-by: James Almer <jamrial@gmail.com>
    Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
Note: See TracTickets for help on using tickets.