matroskadec: Fix bug when parsing realaudio codec parameters

flavor can be 0.

This fixes tract ticket #3214

Signed-off-by: James Almer <jamrial@gmail.com>
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 0d944ee34349805b29f9c91b15c8009d16df01ab)